--- a/src/app/common-header/common-header.component.html
+++ b/src/app/common-header/common-header.component.html
@@ -3,23 +3,25 @@
         <button mat-icon-button class="menu-button" (click)="sidenav.toggle(); andMore()">
             <mat-icon>{{ isMenuOpen ? 'menu_open' : 'menu' }}</mat-icon>
         </button>
-
-        <span>Activités</span>
+        <span>Treasure Hunters</span>
         <span class="spacer"></span>
 
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Scannez un nouveau QR code">
+            <mat-icon>qr_code</mat-icon>
+        </button>
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Vous avez des notifications">
             <mat-icon>notifications</mat-icon>
         </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <button mat-icon-button class="example-icon" aria-label="Partagez avec vos amis">
             <mat-icon>share</mat-icon>
         </button>
     </mat-toolbar>
 
-    <mat-sidenav-container class="sidenav-container {{ isMenuOpen ? 'expanded' : 'shrinked' }}">
+    <mat-sidenav-container (click)="sidenav.toggle(); andMore()" class="sidenav-container {{ isMenuOpen ? 'expanded' : 'shrinked' }}">
         <mat-sidenav #sidenav autoFocus="false" mode="over" [(opened)]="isMenuOpen" class="sidenav">
         <a mat-button routerLink="/hunter/personal"><mat-icon>person_pin</mat-icon> Mes données personnelles</a>
-        <a mat-button routerLink="/hunter/quest" color="accent"><mat-icon>map</mat-icon> Mes recherches</a>
-        <a mat-button routerLink="/hunter/treasure" color="accent"><mat-icon>coin</mat-icon> Mes trésors </a>
+        <a mat-button routerLink="/hunter/quest" color="accent"><mat-icon>map</mat-icon> Mes quêtes</a>
+        <a mat-button routerLink="/hunter/treasure" color="accent"><mat-icon>diamond</mat-icon> Mes trésors </a>
         <a mat-button routerLink="/logout" color="accent"><mat-icon>logout</mat-icon> Déconnexion</a>
     </mat-sidenav>
   </mat-sidenav-container>
