--- a/src/app/hunter/quest/quest.component.html
+++ b/src/app/hunter/quest/quest.component.html
@@ -1,1 +1,23 @@
-<p>quest works!</p>
+<h3>Mes prochaines Quêtes</h3>
+<p>quest works! 1</p>
+<p>quest works! 2</p>
+<p>quest works! 3</p>
+<p>quest works! 4</p>
+<p>quest works! 5</p>
+<h3>Mes Quêtes en cours</h3>
+<p>quest works! 1</p>
+<p>quest works! 2</p>
+<p>quest works! 3</p>
+<p>quest works! 4</p>
+<p>quest works! 10</p>
+<h3>Mes Quêtes Finies</h3>
+<p>quest works! 1</p>
+<p>quest works! 2</p>
+<p>quest works! 3</p>
+<p>quest works! 4</p>
+<p>quest works! 15</p>
+<p>quest works! 1</p>
+<p>quest works! 2</p>
+<p>quest works! 3</p>
+<p>quest works! 4</p>
+<p>quest works! 20</p>
