--- a/src/app/hunter/treasure/treasure.component.html
+++ b/src/app/hunter/treasure/treasure.component.html
@@ -1,1 +1,23 @@
-<p>treasure works!</p>
+<h3>Mes trésors toujours cachés</h3>
+<p>treausre works! 1</p>
+<p>treausre works! 2</p>
+<p>treausre works! 3</p>
+<p>treausre works! 4</p>
+<h3>Mes trésors recherchés</h3>
+<p>treausre works! 5</p>
+<p>treausre works! 1</p>
+<p>treausre works! 2</p>
+<p>treausre works! 3</p>
+<p>treausre works! 4</p>
+<h3>Mes trésors trouvés</h3>
+<p>treausre works! 10</p>
+<p>treausre works! 1</p>
+<p>treausre works! 2</p>
+<p>treausre works! 3</p>
+<p>treausre works! 4</p>
+<p>treausre works! 15</p>
+<p>treausre works! 1</p>
+<p>treausre works! 2</p>
+<p>treausre works! 3</p>
+<p>treausre works! 4</p>
+<p>treausre works! 20</p>
