--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-common-header></app-common-header>
+<div class="vertical-spacer"></div>
+
 <router-outlet></router-outlet>
 
 <!-- Some margin to be sure to get the main container bottom visible -->
