--- a/src/app/common-footer/common-footer.component.html
+++ b/src/app/common-footer/common-footer.component.html
@@ -1,19 +1,10 @@
 <footer>
     <mat-toolbar id="footer-toolbar" color="primary">
-        <button mat-icon-button class="menu-button">
-            <mat-icon routerLink="/">home</mat-icon>
-        </button>
-        <button mat-icon-button class="menu-button">
-            <mat-icon routerLink="/hunt">map</mat-icon>
-        </button>
-        <button mat-icon-button class="menu-button">
-            <mat-icon routerLink="/personal">person_pin</mat-icon>
-        </button>
-        <button  *ngIf="isLoggedIn" mat-icon-button class="menu-button">
-            <mat-icon routerLink="/logout">logout</mat-icon>
-        </button>
-        <button *ngIf="!isLoggedIn" mat-icon-button class="menu-button">
-            <mat-icon routerLink="/login">login</mat-icon>
-        </button>
+        <a class="menu-button" mat-button routerLink="/home"><mat-icon>home</mat-icon></a>
+        <a class="menu-button" mat-button routerLink="/hunter/quest"><mat-icon>map</mat-icon></a>
+        <a class="menu-button" mat-button routerLink="/hunter/treasure"><mat-icon>diamond</mat-icon></a>
+        <a class="menu-button" mat-button routerLink="/hunter/personal"><mat-icon>person_pin</mat-icon></a>
+        <a *ngIf="isLoggedIn" class="menu-button" mat-button routerLink="/logout" color="accent"><mat-icon>logout</mat-icon></a>
+        <a *ngIf="!isLoggedIn" class="menu-button" mat-button routerLink="/login" color="accent"><mat-icon>login</mat-icon></a>
     </mat-toolbar>
 </footer>
