--- a/src/app/hunter/treasure/treasure.component.html
+++ b/src/app/hunter/treasure/treasure.component.html
@@ -1,23 +1,82 @@
-<h3>Mes trésors toujours cachés</h3>
-<p>treausre works! 1</p>
-<p>treausre works! 2</p>
-<p>treausre works! 3</p>
-<p>treausre works! 4</p>
-<h3>Mes trésors recherchés</h3>
-<p>treausre works! 5</p>
-<p>treausre works! 1</p>
-<p>treausre works! 2</p>
-<p>treausre works! 3</p>
-<p>treausre works! 4</p>
-<h3>Mes trésors trouvés</h3>
-<p>treausre works! 10</p>
-<p>treausre works! 1</p>
-<p>treausre works! 2</p>
-<p>treausre works! 3</p>
-<p>treausre works! 4</p>
-<p>treausre works! 15</p>
-<p>treausre works! 1</p>
-<p>treausre works! 2</p>
-<p>treausre works! 3</p>
-<p>treausre works! 4</p>
-<p>treausre works! 20</p>
+<table>
+    <tr>
+        <th colspan="6">
+            <h3>Mes trésors toujours cachés</h3>
+        </th>
+    </tr>
+    <ng-container *ngFor="let i of hunt">
+        <ng-container *ngIf="i.mode == 1">
+            <tr>
+                <td>{{i.id}}</td>
+                <td>{{i . name }}</td>
+                <td>{{i . begin | date: "dd/MM/yyyy"}}</td>
+                <td>{{i . end| date: "dd/MM/yyyy"}}</td>
+                <td>{{i . location}}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="5">{{i . description}}</td>
+            </tr>
+        </ng-container>
+    </ng-container>
+    <tr>
+        <th colspan="6">
+            <h3>Mes trésors recherchés</h3>
+        </th>
+    </tr>
+    <ng-container *ngFor="let i of hunt">
+        <ng-container *ngIf="i.mode == 2">
+            <tr>
+                <td>{{i.id}}</td>
+                <td>{{i . name }}</td>
+                <td>{{i . begin | date: "dd/MM/yyyy"}}</td>
+                <td>{{i . end| date: "dd/MM/yyyy"}}</td>
+                <td>{{i . location}}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="5">{{i . description}}</td>
+            </tr>
+        </ng-container>
+    </ng-container>
+    <tr>
+        <th colspan="6">
+            <h3>Mes trésors trouvés</h3>
+        </th>
+    </tr>
+    <ng-container *ngFor="let i of hunt">
+        <ng-container *ngIf="i.mode == 3">
+            <tr>
+                <td>{{i.id}}</td>
+                <td>{{i . name }}</td>
+                <td>{{i . begin | date: "dd/MM/yyyy"}}</td>
+                <td>{{i . end| date: "dd/MM/yyyy"}}</td>
+                <td>{{i . location}}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="5">{{i . description}}</td>
+            </tr>
+        </ng-container>
+    </ng-container>
+    <tr>
+        <th colspan="6">
+            <h3>Mes trésors perdus</h3>
+        </th>
+    </tr>
+    <ng-container *ngFor="let i of hunt">
+        <ng-container *ngIf="i.mode == 4">
+            <tr>
+                <td>{{i.id}}</td>
+                <td>{{i . name }}</td>
+                <td>{{i . begin | date: "dd/MM/yyyy"}}</td>
+                <td>{{i . end| date: "dd/MM/yyyy"}}</td>
+                <td>{{i . location}}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="5">{{i . description}}</td>
+            </tr>
+        </ng-container>
+    </ng-container>
+</table>
